@@ -1,3 +1,7 @@
+[0, 15, 74]: 2018-10-17
+  - fix dropping of comment on rt before sequence item that is sequence item
+    (reported by `Thorsten Kampe <https://bitbucket.org/thorstenkampe/>`__)
+
 [0, 15, 73]: 2018-10-16
   - fix irregular output on pre-comment in sequence within sequence (reported
     by `Thorsten Kampe <https://bitbucket.org/thorstenkampe/>`__)
